--- a/front-end/inscription/styl.css
+++ b/front-end/inscription/styl.css
@@ -4,27 +4,30 @@
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    color: white;
+    color: rgb(0, 0, 0);
+    box-sizing: border-box;
 }
 
 body{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(253, 253, 253);
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .container{
     min-height: 550px;
     width: 450px;
-    /* background-color: rgba(0, 195, 255, 0.685); */
+    background-color: rgba(255, 255, 255, 0.71);
     border-radius: 5px;
     padding: 10px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid rgb(255, 254, 254);
+    border: 1px solid rgb(0, 0, 0);
     position: relative;
 }
 
@@ -60,12 +63,35 @@ body{
     transition: .3s;
     background-color: #ffffff37;
 }
+
+/* configuration des regex */
+.errorMail{
+    border: 1px solid red!important;
+}
+#messageM{
+    font-size: .55rem;
+    font-weight: 600;
+    color: red;
+}
+#messageP li p{
+    font-size: .55rem;
+    font-weight: 600;
+    color: red;
+}
+#messageP{
+    display: none;
+}
+.mdp2 p{
+    font-size: .55rem;
+    font-weight: 600;
+    color: red;
+}
 .container form div input::placeholder{
-    color: white;
+    color: rgb(0, 0, 0);
 }
 .container form div input:focus{
     transform: scaleY(1.2);
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid rgba(0, 68, 255, 0.821);
 }
 .nomPrenom div{
     /* background-color: blue; */
@@ -138,7 +164,6 @@ input::placeholder{
     margin: 10px;
     position: relative;
     z-index: -10;
-    opacity: .7;
     animation: translate 15s infinite ease-in-out;
 }
 #divbacgroud li:nth-child(1){
