une sauvegar pour me rassure

--- a/front-end/produit/produit-stile.css
+++ b/front-end/produit/produit-stile.css
@@ -233,6 +233,9 @@
 #titrecontainer h2 img{
     width: 30px;
 }
+#titrecontainer h2 img:nth-child(1),#titrecontainer h2 img:nth-child(2){
+    transform: rotate(180deg);
+}
 #titrecontainer p{
     font-weight: 800;
     font-size: 1.3rem;
@@ -452,6 +455,4 @@
     }
 
 }
-
-
 
